# RaytracingPractise

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Debug_Generater.ps1  Image_Generater.ps1  README.md  RaytracingPractise.sln  RaytracingPractise.vcxproj  RaytracingPractise.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  camera.cuh  camera.h  cmake_install.cmake  color.cuh  color.h  hittable.cuh  hittable.h  hittable_list.cuh  hittable_list.h  image1.ppm  main.cc  main.cu  material.cuh  material.h  math_constants.h  ray.cuh  ray.h  sphere.cuh  sphere.h  vec3.cuh  vec3.h  x64_Generater.ps1
image/: 10.2.ppm  Diffuse sphere, with gamma correction.ppm  Mirrored Light Reflection.ppm  center cam.ppm  center1.ppm  cp344.ppm  depth of field.ppm  depth of field1.ppm  dielectric_error.ppm  fuzz.ppm  gradient1.ppm  gradient_error_h,v.ppm  hFOV.ppm  hemispherical scattering.ppm  hollow shpere -0.5.ppm  hollow sphere -0.3.ppm  hollow sphere -0.4.ppm  image.ppm  internal refract.ppm  orient cam.ppm  schlick's.ppm  sphere.ppm  vFOV.ppm  wolrd1.ppm  wolrd4.ppm  zoom.ppm
src/: color.h  hittable_list.h  main.cc  math_constants.h  sphere.h  vec3.h
x64/Debug/: RaytracingPractise.exe.recipe  RaytracingPractise.ilk  RaytracingPractise.vcxproj.FileListAbsolute.txt  main.cu-418128916.deps  main.cu.cache  vc143.idb
x64/Debug/Raytraci.2094d727.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  RaytracingPractise.lastbuildstate  link.command.1.tlog  (+2 more)
